<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="email_enter">Enter your email address:</string>
    <string name="hint">Type email here</string>
    <string name="ButtonText">LOGIN </string>
    <string name="password">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="hintSecondPage1">Enter your name</string>
    <string name="emailPage2">Your email:</string>
    <string name="hintSecondPage2">Enter your email</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickButton">Click the button above to take a picture</string>
    <string name="GoToChat">Go to chat</string>
    <string name="sendB">SEND</string>
    <string name="receiveB">RECEIVE</string>
    <string name="input">Type here</string>
    <string name="goToWeather">Go to weather forecast</string>
    <string name="CurTemp">Current Temperature:</string>
    <string name="MinTemp">Minimum Temperature:</string>
    <string name="MaxTemp">Maximum Temperature:</string>
    <string name="UVrating">UV rating:</string>
    <string name="Message_Here">Message Here</string>
    <string name="ID">ID=</string>
    <string name="isSend">Is a Send Message</string>
    <string name="hide">HIDE</string>
    <string name="goToTestToolbar">Go To Toolbar Page</string>
    <string name="goToMain">Go to main</string>
    <string name="overflowMenuItem">Overflow Menu Item</string>
    <string name="thisIsOverflow">You clicked on the overflow menu</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="item1">item 1</string>
    <string name="item2">item 2</string>
    <string name="item3">item 3</string>
    <string name="clickitem1">You clicked on item 1</string>
    <string name="clickitem2">You clicked on item 2</string>
    <string name="clickitem3">You clicked on item 3</string>
    <string name="ChatPage">Chat Page</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="GoBackToMain">Go Back to Login</string>
</resources>