<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:title="@string/item1"
        android:icon="@drawable/item1"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        android:icon="@drawable/item2"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/item3"
        android:title="@string/item3"
        android:icon="@drawable/item3"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item
        android:id="@+id/overflow"
        android:title="@string/overflowMenuItem"
        android:orderInCategory="4"
        app:showAsAction="never" />

</menu>