<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@+id/fragDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Message_Here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Message_Here"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Message_Here"
            android:text="@string/ID"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/CB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ID"
            android:text="@string/isSend" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/hide" />
    </RelativeLayout>

</FrameLayout>