<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/ivWeather"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/CurrentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurTemp"
        android:layout_below="@id/ivWeather"/>

    <TextView
        android:id="@+id/MinTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MinTemp"
        android:layout_below="@id/CurrentTemperature"/>

    <TextView
        android:id="@+id/MaxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaxTemp"
        android:layout_below="@id/MinTemperature"/>

    <TextView
        android:id="@+id/UVRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UVrating"
        android:layout_below="@id/MaxTemperature"/>

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />


</RelativeLayout>